# doppelganger

./: .gitignore  Makefile  README.md  doppelganger.go  go.mod  test.json
examples/: file_or_json_example.doppl.json
internal/config/: config.go
internal/expressions/: expressions.go
internal/server/: server.go
migrators/: params_migrator.py
python/: pyproject.toml
python/doppelganger_py/: __init__.py  cli.py  config.py  expressions.py  server.py
typescript/: package-lock.json  package.json
typescript/src/: config.ts  expressions.ts  index.ts  server.ts
