[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doppelganger-py"
version = "1.0.0"
description = "Simple CLI mock server - Python implementation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Diogo Ferreira"},
    {name = "Eduardo Barrancos"},
    {name = "André Ferreira"}
]
dependencies = [
    "flask>=2.0.0",
]

[project.scripts]
doppelganger-py = "doppelganger_py.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
